Correcoes da view subversion para adequacao aas ultimas modificacoes
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@32 31482026-630c-0410-91bb-adf60aae4351

--- a/src/app/views/report/subversion.rhtml
+++ b/src/app/views/report/subversion.rhtml
@@ -10,7 +10,10 @@
     <% @headlines.each do |headline|%>
     <p>
       <%= headline.title %><br/>
-      <font size="-1"><i><%= headline.author %></i> <%= headline.date %></font>
+      <font size="-1">
+        <i><%= headline.author %></i>
+        <%= headline.event_date %>
+      </font>
       <hr/>
     </p>
     <% end %>
