Relatorio subversion acessivel na pagina principal
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@54 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -29,5 +29,8 @@
         <a href="http://groups.google.com/group/motiro">motiro@googlegroups.com</a>.
         Junte-se ao mutirão!
       </p>
+      <div id="svn">
+        <%= render_component(:controller => 'report', :action =>  'subversion') %>
+      </div>
   </body>
 </html>
