--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -6,6 +6,7 @@
     <title>Motiro: Bem-vindo</title>
   </head>
   <body>
+    <div id="description">
       <h1>Motiro</h1>
       <p>
         Seja bem-vindo! Esta é a página principal do projeto Motiro.
@@ -29,8 +30,9 @@
         <a href="http://groups.google.com/group/motiro">motiro@googlegroups.com</a>.
         Junte-se ao mutirão!
       </p>
-      <div id="svn">
-        <%= render_component(:controller => 'report', :action =>  'subversion') %>
-      </div>
+    </div>
+    <div id="svn">
+      <%= render_component(:controller => 'report', :action =>  'subversion') %>
+    </div>
   </body>
 </html>
