Removida a duplicacao entre os controladores feed e report
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@58 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -32,7 +32,9 @@
       </p>
     </div>
     <div id="svn">
-      <%= render_component(:controller => 'report', :action =>  'subversion') %>
+      <%= render_component(:controller => 'report',
+                           :action =>  'show',
+                           :reporter => 'subversion') %>
     </div>
   </body>
 </html>
