--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -36,5 +36,7 @@
                            :action =>  'show',
                            :reporter => 'subversion') %>
     </div>
+  <hr/>
+  <font size="-2" color="#909090">Motiro versão <%= MOTIRO_VERSION %>, revisão <%= MOTIRO_REVISION %></font>
   </body>
 </html>
