Numero de revisao removido
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@66 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -37,6 +37,6 @@
                            :reporter => 'subversion') %>
     </div>
   <hr/>
-  <font size="-2" color="#909090">Motiro versão <%= MOTIRO_VERSION %>, revisão <%= MOTIRO_REVISION %></font>
+  <font size="-2" color="#909090">Motiro versão <%= MOTIRO_VERSION %></font>
   </body>
 </html>
