Adicionado link para o feed RSS no titulo do canal
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@69 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -1,4 +1,12 @@
-<p><h1>Últimas notícias do Subversion</h1></p>
+<p>
+  <h1>Últimas notícias do Subversion</h1>
+  <%= link_to ( image_tag('rss.gif', :border => 0),
+                { :controller => 'report',
+                  :action => 'show',
+                  :reporter => 'subversion',
+                  :format => 'rss' } )
+  %>
+</p>
 <% @headlines.each do |headline|%>
   <p>
     <%= h(headline.title) %><br/>
