Nome do campo data da machete modificiado para 'happened_at'
Modificacao para se adequar aa convencao Rails

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@76 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -12,7 +12,7 @@
     <%= h(headline.title) %><br/>
     <font size="-1">
       <i><%= h(headline.author) %></i>
-      <%= h(headline.event_date) %>
+      <%= h(headline.happened_at) %>
     </font>
     <hr/>
   </p>
