Agora mostrando o comentario da alteracao completo
O comentario completo da alteracao jah estah disponivel tanto na pagina
principal quanto no feed rss. Porem a coisa soh funciona em modo de 
producao. O modo de desenvolvimento ateh mostra os links, mas eles 
apontam para o lugar errado.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@86 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -9,7 +9,11 @@
 </p>
 <% @headlines.each do |headline|%>
   <p>
-    <%= h(headline.title) %><br/>
+    <%= link_to( h(headline.title),
+                 { :controller => 'report',
+                   :action => 'show',
+                   :id => headline.id } )%>
+    <br/>
     <font size="-1">
       <i><%= h(headline.author) %></i>
       <%= h(headline.happened_at) %>
