Corrigido o bug que causava um erro na pagina inicial
O erro somente era apresentado em modo de desenvolvimento


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@87 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -34,7 +34,7 @@
     <div id="svn">
       <%= render_component(:controller => 'report',
                            :action =>  'show',
-                           :reporter => 'subversion') %>
+                           :params => {:reporter => 'subversion'}) %>
     </div>
   <hr/>
   <font size="-2" color="#909090">Motiro versão <%= MOTIRO_VERSION %></font>
