Controlador report agora delegando a busca de artigos referentes a manchetes para o editor-chefe
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@95 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/detail.rhtml
+++ b/app/views/report/detail.rhtml
@@ -3,15 +3,12 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title><%= h(@headline.title) %></title>
+    <title>Alteração Subversion</title>
   </head>
   <body>
-    <p>
-      <b><%= h(@headline.title) %></b>
-    </p>
     <div id="description">
       <pre>
-<%= h(@headline.description) %>
+<%= h(@article.description) %>
       </pre>
     </div>
   </body>
