Detalhamento sem cache pronto
Mais um teste de aceitacao ficou verde

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@98 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -12,7 +12,8 @@
     <%= link_to( h(headline.title),
                  { :controller => 'report',
                    :action => 'show',
-                   :id => headline.id } )%>
+                   :reporter => 'subversion',
+                   :id => headline.rid } )%>
     <br/>
     <font size="-1">
       <i><%= h(headline.author) %></i>
