Tratado caso de erro ao procurar manchetes
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@103 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -6,7 +6,10 @@
     <title>Motiro: Bem-vindo</title>
   </head>
   <body>
-    <div id="description">
+      <% if @flash[:notice] -%>
+        <div id="notice"><%= @flash[:notice] %></div>
+      <% end -%>
+      <div id="description">
       <h1>Motiro</h1>
       <p>
         Seja bem-vindo! Esta é a página principal do projeto Motiro.
