--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -4,6 +4,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Motiro: Bem-vindo</title>
+    <%= stylesheet_link_tag "motiro", :media => "all" %>
   </head>
   <body>
       <% if @flash[:notice] -%>
