Agora mostrando resumo das modificacoes de cada revisao
Alem de mostrar o comentario completo, o detalhamento agora mostra os 
nomes dos recursos que foram alterados com a revisao. A partir desta 
revisao, o Motiro ja deve mostrar uma lista de recursos alterados abaixo 
desta mensagem.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@105 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/detail.rhtml
+++ b/app/views/report/detail.rhtml
@@ -11,6 +11,11 @@
 <%= h(@article.description) %>
       </pre>
     </div>
+    <div id="summary">
+      <pre>
+<%= h(@article.summary) %>
+      </pre>
+    </div>
   </body>
 </html>
     
