--- a/app/views/report/detail.rhtml
+++ b/app/views/report/detail.rhtml
@@ -3,9 +3,10 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>Alteração Subversion</title>
+    <title>Motiro - Subversion - Revisão <%= @revision_id -%></title>
   </head>
   <body>
+    <h1>Revisão <%= @revision_id -%></h1>
     <div id="description">
       <pre>
 <%= h(@article.description) %>
