Algums modificacoes para mostrar os diffs para o usuario
Sistema instavel. Testes unitarios passando, mas funcionais e de 
aceitacao falhando.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@113 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/detail.rhtml
+++ b/app/views/report/detail.rhtml
@@ -20,6 +20,19 @@
       </pre>
     </div>
 <% if !@partial then %>
+    <% n = 1
+       article.changes.each do |change|
+           change_name = "change#{n}"
+           n += 1
+       %>
+      <div id="<%= change_name -%>">
+        <a name="<%= change_name ->" />
+        <h2>Alterações em <%= change.resource_name -%></h2>
+        <pre>
+<%= change.diff -%>
+        </pre>
+      </div>
+    <% end%>
   </body>
 </html>
 <% end %>
