--- a/app/views/report/detail.rhtml
+++ b/app/views/report/detail.rhtml
@@ -16,20 +16,24 @@
     </div>
     <div id="summary">
       <pre>
-<%= h(@article.summary) %>
+        <% n = 1
+           @article.changes.each do |change| %>
+<a href="#change<%= n -%>"><%= h(change.summary.strip) -%></a>
+        <% n += 1
+           end %>
       </pre>
     </div>
 <% if !@partial then %>
     <% n = 1
-       article.changes.each do |change|
+       @article.changes.each do |change|
            change_name = "change#{n}"
            n += 1
        %>
       <div id="<%= change_name -%>">
-        <a name="<%= change_name ->" />
-        <h2>Alterações em <%= change.resource_name -%></h2>
+        <a name="<%= change_name -%>" />
+        <h2>Alterações em <%= h(change.resource_name) -%></h2>
         <pre>
-<%= change.diff -%>
+<%= h(change.diff) -%>
         </pre>
       </div>
     <% end%>
