Inicio da aplicacao de layout via CSS
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@122 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -35,12 +35,11 @@
         Junte-se ao mutirão!
       </p>
     </div>
-    <div id="svn">
+    <div class="channel" id="svn">
       <%= render_component(:controller => 'report',
                            :action =>  'show',
                            :params => {:reporter => 'subversion'}) %>
     </div>
-  <hr/>
-  <font size="-2" color="#909090">Motiro versão <%= MOTIRO_VERSION %></font>
+  <div id="footer">Motiro versão <%= MOTIRO_VERSION %></div>
   </body>
 </html>
