Inicio da exibicao do reporter de eventos
TESTES FALHANDO!!!


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@123 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -40,6 +40,11 @@
                            :action =>  'show',
                            :params => {:reporter => 'subversion'}) %>
     </div>
+    <div class="channel" id="events">
+      <%= render_component(:controller => 'report',
+                           :action =>  'show',
+                           :params => {:reporter => 'events'}) %>
+    </div>
   <div id="footer">Motiro versão <%= MOTIRO_VERSION %></div>
   </body>
 </html>
