Reporter de eventos e reestruturacao do codigo
- Reporter de eventos ainda nao funciona ao vivo
- Ainda nao ha detalhamento dos eventos


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@124 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -1,9 +1,9 @@
 <p>
-  <h1>Últimas notícias do Subversion</h1>
+  <h1><%= h(@title) %></h1>
   <%= link_to( image_tag('rss.gif', :border => 0),
                { :controller => 'report',
                  :action => 'show',
-                 :reporter => 'subversion',
+                 :reporter => @name,
                  :format => 'rss' } )
   %>
 </p>
@@ -12,7 +12,7 @@
     <%= link_to( h(headline.title),
                  { :controller => 'report',
                    :action => 'show',
-                   :reporter => 'subversion',
+                   :reporter => @name,
                    :id => headline.rid } )%>
     <br/>
     <font size="-1">
