Disposicao das imagens (links RSS) alterada
Agora quem mostra as imagens eh a folha de estilos CSS, o codigo HTML apenas
marca o local onde deverah ser inserida a imagem e utiliza um texto apropriado
caso ela nao possa ser mostrada. 

Esta modificacao foi feita para compatibilizar os testes com o novo
comportamento da funcao image_tag. A partir de Rails 1.1 esta funcao inclui
dados de timestamp nas referencias a imagens e os scripts de testes estavam
checando pela referencia sem timestamp e sinalizando erros por causa disso.
Com esta modificacao os scripts de teste podem verificar somente a existencia
da marcacao no codigo HTML.

Referencias para a tecnica de substituicao de texto por imagens utilizando
CSS:

http://wellstyled.com/css-replace-text-by-image.html
http://www.stopdesign.com/articles/replace_text/

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@142 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -1,6 +1,6 @@
 <p>
   <h1><%= h(@title) %></h1>
-  <%= link_to( image_tag('rss.gif', :border => 0),
+  <%= link_to( "<div class='rss-link'>RSS<span></span></div>",
                { :controller => 'report',
                  :action => 'show',
                  :reporter => @name,
