Classe Article removida
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@155 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/events/_form.rhtml
+++ b/app/views/events/_form.rhtml
@@ -7,7 +7,7 @@
 <p><label for="headline_happened_at">Data</label><br/>
 <%= date_select 'headline', 'happened_at'  %></p>
 
-<p><label for="article_description">Descrição</label><br/>
-<%= text_area 'article', 'description'  %></p>
+<p><label for="headline_description">Descrição</label><br/>
+<%= text_area 'headline', 'description'  %></p>
 <!--[eoform:headline]-->
 
