Ultimos vestigios de article removidos
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@156 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/detail.rhtml
+++ b/app/views/report/detail.rhtml
@@ -12,17 +12,17 @@
 <% end %>
     <div id="description">
       <pre>
-<%= h(@article.description) %>
+<%= h(@headline.description) %>
       </pre>
     </div>
     <div id="summary">
-        <% @article.changes.each do |change| %>
+        <% @headline.changes.each do |change| %>
             <%= change.render_summary -%>
             <br/>
         <% end %>
     </div>
 <% if !@partial then %>
-    <% @article.changes.each do |change| %>
+    <% @headline.changes.each do |change| %>
         <%= change.render_diff %>
     <% end %>
   </body>
