Especificando a codificacao das paginas de eventos para evitar caracteres estranhos
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@162 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/layouts/events.rhtml
+++ b/app/views/layouts/events.rhtml
@@ -1,12 +1,13 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<head>
-  <title>Events: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
-</head>
-<body>
-
-<p style="color: green"><%= flash[:notice] %></p>
-
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <title>Motiro: Eventos</title>
+    <%= stylesheet_link_tag "motiro", :media => "all" %>
+  </head>
+  
+  <body>
 <%= @content_for_layout %>
 
 </body>
