Experiencias com bordas arredondadas
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@163 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -1,24 +1,28 @@
-<p>
-  <h1><%= h(@title) %></h1>
+<div class='channel-title'>
+  <h2><%= h(@title) %></h2>
   <%= link_to( image_tag('rss.gif', :border => 0),
                { :controller => 'report',
                  :action => 'show',
                  :reporter => @name,
                  :format => 'rss' } )
   %>
-</p>
+</div>
+<div class='channel-body-outer'>
+  <div class='channel-body-inner'>
 <% @headlines.each do |headline|%>
-  <p>
-    <%= link_to( h(headline.title),
-                 { :controller => 'report',
-                   :action => 'show',
-                   :reporter => @name,
-                   :id => headline.rid } )%>
-    <br/>
-    <font size="-1">
-      <i><%= h(headline.author) %></i>
-      <%= h(headline.happened_at) %>
-    </font>
-    <hr/>
-  </p>
+    <p>
+      <%= link_to( h(headline.title),
+                   { :controller => 'report',
+                     :action => 'show',
+                     :reporter => @name,
+                     :id => headline.rid } )%>
+      <br/>
+      <font size="-1">
+        <i><%= h(headline.author) %></i>
+        <%= h(headline.happened_at) %>
+      </font>
+      <hr/>
+    </p>
 <% end %>
+  </div>
+</div>
