--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -5,6 +5,22 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Motiro: Bem-vindo</title>
     <%= stylesheet_link_tag "motiro", :media => "all" %>
+    <style type="text/css">
+        div.channel div.channel-title{font: normal 80%/1.3 Verdana,sans-serif;
+            margin:0 0 0 0;padding: 2px 2px 0 4px;text-align:left;color: #000}
+        div.channel div.channel-body-inner{margin:0;padding: 0 4px 1px 4px;
+            background: #FFC; font:normal Verdana,sans-serif}
+        div#svn div.channel-title{background: #E3A1C4}
+        div#svn div.channel-body-outer{border:4px solid #E3A1C4}
+        div#events div.channel-title{background: #FFBD00}
+        div#events div.channel-body-outer{border:4px solid #FFBD00}
+    </style>
+    <script type="text/javascript" src="niftycube.js"></script>
+    <script type="text/javascript">
+        window.onload=function(){
+            Nifty("div.channel div.channel-title","top,big");
+        }
+    </script>
   </head>
   <body>
       <% if @flash[:notice] -%>
