--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -15,6 +15,8 @@
     <script type="text/javascript">
         window.onload=function(){
             Nifty("div.channel-title","top,big");
+            Nifty("div#description","big");
+            Nifty("div#footer","big");
         }
     </script>
   </head>
@@ -57,6 +59,8 @@
                            :action =>  'show',
                            :params => {:reporter => 'events'}) %>
     </div>
-  <div id="footer">Motiro versão <%= MOTIRO_VERSION %></div>
+  <div id="footer">
+    <p>Motiro versão <%= MOTIRO_VERSION %></p>
+  </div>
   </body>
 </html>
