--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -1,5 +1,6 @@
 body {
-    font: normal 10pt Verdana,sans-serif
+    font: normal 10pt Verdana,sans-serif;
+    background-color: #234;    
 }
 
 #notice {
@@ -11,17 +12,23 @@ body {
     color: #ffffff;
 }
 
+#description {
+    width: 780px;
+    background-color: #FFD;
+    padding: 2px 6px 2px 6px;
+}
+
 #summary {
     font: smaller courier;
 }
 
 div.channel {
-    width: 48%;
+    width: 384px;
     float: left;
-    padding: 8px 16px 8px 0px;
+    padding: 8px 4px 8px 4px;
 }
 
-div.channel-title{
+div.channel-title {
     font: normal 8pt Verdana,sans-serif;
     margin:0 0 0 0;
     padding: 2px 2px 0 8px;
@@ -29,18 +36,18 @@ div.channel-title{
     color: #000
 }
             
-div.channel-body-inner{
+div.channel-body-inner {
     margin:0;
     padding: 1px 4px 1px 4px;
-    background: #FFC;
+    background: #FFD;
     font:normal Verdana,sans-serif
 }
 
 #footer {
-    width: 40%;
-    padding-top: 4px;
-    border-top: solid medium gray;
+    width: 780px;
+    padding: 4px 6px 2px 4px;
     font-size: x-small;
     color: gray;
     clear: left;
+    background-color: #FFD;
 }
