--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -1,6 +1,7 @@
 body {
     font: normal 10pt Verdana,sans-serif;
-    background-color: #234;    
+    background-color: #234; 
+    text-align:center;   
 }
 
 #notice {
@@ -12,10 +13,15 @@ body {
     color: #ffffff;
 }
 
-#description {
+#content {
     width: 780px;
+    margin: 0 auto;
+    text-align:left;   
+}
+
+#description {
     background-color: #FFD;
-    padding: 2px 6px 2px 6px;
+    padding: 0px 6px 2px 6px;
 }
 
 #summary {
@@ -23,7 +29,7 @@ body {
 }
 
 div.channel {
-    width: 384px;
+    width: 381px;
     float: left;
     padding: 8px 4px 8px 4px;
 }
@@ -44,7 +50,6 @@ div.channel-body-inner {
 }
 
 #footer {
-    width: 780px;
     padding: 4px 6px 2px 4px;
     font-size: x-small;
     color: gray;
