--- a/app/views/report/html_fragment.rhtml
+++ b/app/views/report/html_fragment.rhtml
@@ -1,11 +1,12 @@
 <div class='channel-title'>
-  <h2><%= h(@title) %></h2>
-  <%= link_to( image_tag('rss.gif', :border => 0),
+  <%= link_to( image_tag('rss.png', :border => 0, :class => 'rss'),
                { :controller => 'report',
                  :action => 'show',
                  :reporter => @name,
-                 :format => 'rss' } )
+                 :format => 'rss' },
+               :class => 'feed' )
   %>
+  <p><%= h(@title) %></p>
 </div>
 <div class='channel-body-outer'>
   <div class='channel-body-inner'>
