Bordas inferiores dos canais arredondadas
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@168 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -49,6 +49,10 @@ div.channel-body-inner {
     font:normal Verdana,sans-serif
 }
 
+div.channel-body-outer {
+    padding: 0 9px 0 9px;
+}
+
 a.feed {
     display: block;
     float: right;
