--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -7,14 +7,15 @@
     <%= stylesheet_link_tag "motiro", :media => "all" %>
     <style type="text/css">
         div#svn div.channel-title{background: #E3A1C4}
-        div#svn div.channel-body-outer{border:4px solid #E3A1C4}
+        div#svn div.channel-body-outer{background: #E3A1C4}
         div#events div.channel-title{background: #FFBD00}
-        div#events div.channel-body-outer{border:4px solid #FFBD00}
+        div#events div.channel-body-outer{background: #FFBD00}
     </style>
     <script type="text/javascript" src="niftycube.js"></script>
     <script type="text/javascript">
         window.onload=function(){
             Nifty("div.channel-title","top,big");
+            Nifty("div.channel-body-outer","bottom,big");
             Nifty("div#description","big");
             Nifty("div#footer","big");
         }
