Mudanca no esquema de cores
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@174 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/events_detail.rhtml
+++ b/app/views/report/events_detail.rhtml
@@ -16,12 +16,14 @@
   <body>
     <div id="content">
       <div id="description" class="window">
-        <h1><%= h(@headline.title) -%></h1>
+        <div class="inner">
+          <h1><%= h(@headline.title) -%></h1>
 <% end %>
-        <pre>
+          <pre>
 <%= h(@headline.description) %>
-        </pre>
+          </pre>
 <% if ! @partial then %>
+        </div>
       </div>
     </div>
   </body>
