--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -26,6 +26,7 @@
         <div id="notice"><%= @flash[:notice] %></div>
       <% end -%>
       <div id="description" class="window">
+      <div class = "inner">
       <h1>Motiro</h1>
       <p>
         Seja bem-vindo! Esta é a página principal do projeto Motiro.
@@ -50,6 +51,7 @@
         Junte-se ao mutirão!
       </p>
     </div>
+    </div>
     <div class="channel" id="svn">
       <%= render_component(:controller => 'report',
                            :action =>  'show',
@@ -60,7 +62,7 @@
                            :action =>  'show',
                            :params => {:reporter => 'events'}) %>
     </div>
-    <div id="footer" class="window">
+    <div id="footer">
       <p>Motiro versão <%= MOTIRO_VERSION %></p>
     </div>
     </div>
