Iniciando differ bonitinho
Muitos casos ainda nao cobertos.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@176 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -57,6 +57,34 @@ div.inner {
     padding: 1px 4px 4px 4px;
 }
 
+.added {
+    background:#4F8;
+}
+
+.removed {
+    background:#F88;
+}
+
+table {
+    border: solid 1px;
+    font-family: monospace;
+}
+
+table pre {
+    margin: 0;
+    padding: 0;
+}
+
+tr {
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    border: 0;
+}
+
+td {
+    padding: 0 0.4em 0 0.4em;
+}
+
 #footer {
     padding: 4px 6px 2px 8px;
     font-size: x-small;
