Progressos na exibicao de diffs
A partir desta revisao a listagem das alteracoes deve estar mais apresentavel.
Ainda ha muito a melhorar e experimentar, principalmente no que diz respeito a
diffs que apresentam um desequilibrio entre o numero de linhas removidas e
adicionadas.

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@177 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/subversion_detail.rhtml
+++ b/app/views/report/subversion_detail.rhtml
@@ -33,13 +33,11 @@
 <% if !@partial then %>
         </div>
       </div>
-      <div id="changes" class="window">
-        <div class="inner">
-        <% @headline.changes.each do |change| %>
-            <%= change.render_diff %>
-        <% end %>
-        </div>
-      </div>
+    </div>
+    <div id="changes">
+      <% @headline.changes.each do |change| %>
+          <%= change.render_diff %>
+      <% end %>
     </div>
   </body>
 </html>
