--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -57,12 +57,8 @@ div.inner {
     padding: 1px 4px 4px 4px;
 }
 
-.added {
-    background:#4F8;
-}
-
-.removed {
-    background:#F88;
+.changed {
+    background:#FFD;
 }
 
 table {
