Separador para descontinuidade (SVN Differ)
Agora um espaco em branco eh mostrado nas quebras de numeracao.
Ainda eh preciso

- Pular numeracao para linhas adicionadas
- Numerar as linhas do lado direito (arquivo modificado)


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@186 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -62,7 +62,8 @@ div.inner {
 }
 
 table {
-    border: solid 1px gray;
+    border: solid gray;
+    border-width: 1px 0 1px 0;
     font-family: monospace;
 }
 
