--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -65,6 +65,7 @@ table {
     border: solid gray;
     border-width: 1px 0 1px 0;
     font-family: monospace;
+    font-size: small;
 }
 
 table pre {
@@ -81,6 +82,12 @@ tr {
 
 td {
     padding: 0 0.4em 0 0.4em;
+}
+
+td.line_number {
+    text-align: center;
+    border:solid gray;
+    border-width: 0 1px 0 1px;';
 }
 
 #footer {
