Ajustes da pagina principal para o IE6
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@191 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -24,7 +24,7 @@ body {
 }
 
 div.channel {
-    width: 381px;
+    width: 378px;
     float: left;
     margin: 4px 4px 4px 4px;
 }
@@ -87,7 +87,7 @@ td {
 td.line_number {
     text-align: center;
     border:solid gray;
-    border-width: 0 1px 0 1px;';
+    border-width: 0 1px 0 1px;
 }
 
 #footer {
