Consertando bordas redondas no IE6 e tamanho de fonte para o Firefox em WinXP
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@192 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -48,7 +48,7 @@ a.feed {
 
 div.window {
     background-color: #B0F3FF;
-    padding: 0 8px 8px 8px;
+    padding: 8px 8px 8px 8px;
     margin: 8px 4px 8px 4px;
 }
 
@@ -65,7 +65,7 @@ table {
     border: solid gray;
     border-width: 1px 0 1px 0;
     font-family: monospace;
-    font-size: small;
+    font-size: 0.72em;
 }
 
 table pre {
