Grande refatoracao do differ
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@194 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -84,6 +84,15 @@ td {
     padding: 0 0.4em 0 0.4em;
 }
 
+td.left {
+    border:solid;
+    border-color: black gray black black;
+}
+
+td.right {
+    border:solid black;
+}
+
 td.line_number {
     text-align: center;
     border:solid gray;
