--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -57,30 +57,39 @@ div.inner {
     padding: 1px 4px 4px 4px;
 }
 
+div.editbar {
+    border-top: 1px dotted #9C9C9C;
+    font-size: 0.8em;
+}
+
+.disabled {
+    color: gray;
+}
+
 .changed {
     background:#FFD;
 }
 
-table {
+table.diff {
     border: solid gray;
     border-width: 1px 0 1px 0;
     font-family: monospace;
     font-size: 0.72em;
 }
 
-table pre {
+table.diff pre {
     margin: 0;
     padding: 0;
     text-align: left;
 }
 
-tr {
+table.diff tr {
     margin: 0 0 0 0;
     padding: 0 0 0 0;
     border: 0;
 }
 
-td {
+table.diff td {
     padding: 0 0.4em 0 0.4em;
 }
 
@@ -97,6 +106,10 @@ td.line_number {
     text-align: center;
     border:solid gray;
     border-width: 0 1px 0 1px;
+}
+
+input {
+    border: solid black 1px;
 }
 
 #footer {
